[gd_scene load_steps=8 format=3 uid="uid://1h3h622765m4"]

[ext_resource type="Script" path="res://Functionality/Scripts/skeleton_minion.gd" id="1_v2fjm"]
[ext_resource type="Texture2D" uid="uid://d12g65ygcaqjm" path="res://Assets/pixil-frame-0 (2).png" id="2_k81j2"]
[ext_resource type="FontFile" uid="uid://crm5aodm5xa2d" path="res://at01.ttf" id="3_82fd1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h27yl"]
radius = 6.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_btrc3"]
radius = 38.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tpn3t"]
radius = 9.0
height = 34.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0bryv"]
bg_color = Color(1, 0, 0, 1)

[node name="skeleton_minion" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_v2fjm")

[node name="enemy_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_k81j2")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-3, 0)
shape = SubResource("CapsuleShape2D_h27yl")

[node name="AttackRange" type="Area2D" parent="."]
position = Vector2(-1, -1)
scale = Vector2(0.720001, 0.720001)

[node name="RangeShape" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_btrc3")

[node name="Attacktimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 6

[node name="HitBoxShape" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-3, 0)
shape = SubResource("CapsuleShape2D_tpn3t")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -12.0
offset_top = -26.0
offset_right = 35.0
offset_bottom = -9.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("3_82fd1")
theme_override_font_sizes/font_size = 16
theme_override_styles/fill = SubResource("StyleBoxFlat_0bryv")
max_value = 50.0
show_percentage = false

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="Attacktimer" to="." method="_on_attacktimer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
